--- a/src/component/ChatBox/ChatBox.css
+++ b/src/component/ChatBox/ChatBox.css
@@ -1,36 +1,123 @@
-.chat-box{
-    height: 75vh;
-    position: relative;
-    background-color: #f1f5ff; 
+.chat-box {
+  height: 75vh;
+  position: relative;
+  background-color: #dadce2;
 }
 
-.chat-user{
-    display: flex;
-    align-items: center;
-    padding: 10px 15px;
-    gap: 10px;
-    border-bottom: 1px solid #c6c6c6;
+.chat-user {
+  display: flex;
+  align-items: center;
+  padding: 10px 15px;
+  gap: 10px;
+  border-bottom: 1px solid #c6c6c6;
 }
 
-.chat-user img{
-    width: 25px;
-    /* height: 40px; */
-    border-radius: 50%;
+.chat-user img {
+  width: 25px;
+  /* height: 40px; */
+  border-radius: 50%;
 }
 
-.chat-user img:first-child{
-    width: 38px;
-    /* height: 40px; */
-    aspect-ratio: 1/1;
+.chat-user img:first-child {
+  width: 38px;
+  /* height: 40px; */
+  aspect-ratio: 1/1;
 }
 
 .chat-user p {
-    flex: 1;
-    font-size: 20px;
-    font-weight: 500;
-    color: #393939;
-    display: flex;
-    align-items: center;
-    /* justify-content: center; */
-    gap: 5px;
+  flex: 1;
+  font-size: 20px;
+  font-weight: 500;
+  color: #393939;
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
+  gap: 5px;
+}
+
+.chat-input {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  padding: 5px 15px;
+  background: white;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.chat-input img {
+  width: 25px;
+  cursor: pointer;
+}
+.chat-input label {
+  display: flex;
+}
+.chat-input label img {
+  width: 18px;
+}
+.chat-input input {
+  flex: 1;
+  /* padding: 10px; */
+  /* border-radius: 20px; */
+  border: none;
+  background-color: #f1f5ff;
+  outline: none;
+}
+
+.chat-message {
+  height: calc(100% - 70px);
+  padding-bottom: 50px;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.s-message div img,
+.r-message div img {
+  width: 25px;
+  aspect-ratio: 1/1;
+  /* height: 40px; */
+  border-radius: 50%;
+}
+.s-message,
+.r-message {
+  display: flex;
+  align-items: end;
+  justify-content: end;
+  gap: 5px;
+  padding: 0px 15px;
+}
+
+.r-message {
+  flex-direction: row-reverse;
+  justify-content: start;
+}
+.message {
+  color: white;
+  background-color: #077eff;
+  padding: 8px;
+  max-width: 200px;
+  font-size: 11px;
+  font-weight: 300;
+  border-radius: 8px 8px 0px 8px;
+  margin-bottom: 30px;
+}
+
+.r-message .message {
+  /* background-color: #077EFF; */
+  border-radius: 8px 8px 8px 0px;
+}
+
+.s-message div,
+.r-message div {
+  text-align: center;
+  font-size: 9px;
+}
+
+.message-img {
+  max-width: 230px;
+  margin-bottom: 30px;
+  border-radius: 10px;
 }
