--- a/src/component/LeftSideBar/LeftSidebar.css
+++ b/src/component/LeftSideBar/LeftSidebar.css
@@ -89,3 +89,36 @@
     color: #9f9f9f;
     font-size: 10px;
 }
+
+.ls-nav .menu {
+  position: relative;
+  padding: 10px 0px;
+}
+
+.menu .sub-menu {
+  position: absolute;
+  top: 100%;
+  right:0;
+  width: 130px;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: white;
+  color: black;
+  display: none;
+}
+
+.sub-menu hr {
+  border: none;
+  height: 1px;
+  background: #a4a4a4;
+  margin: 8px 0px;
+}
+
+.sub-menu p {
+  font-size: 12px;
+  cursor: pointer;
+}
+
+.menu:hover .sub-menu {
+  display: block;
+}
