--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -4,7 +4,11 @@
   box-sizing: border-box;
 }
 
-body {
+body{
+  background: linear-gradient(to right, #238cca, #362d9a);
+}
+
+.login-container {
   background: linear-gradient(to right, #238cca, #362d9a);
   display: flex;
   justify-content: center;
@@ -232,4 +236,18 @@ a {
     opacity: 1;
     z-index: 5;
   }
+}
+
+.login-term{
+  display: flex;
+  gap: 5px;
+  font-size: 12px;
+  color: #333;
+}
+
+#login-Signup{
+  display: flex;
+  gap: 5px;
+  font-size: 12px;
+  margin: 15px 0;
 }
